Created functionality of the simple_multiplication

--- a/Simple_Multiply_scoredisplay/index.html
+++ b/Simple_Multiply_scoredisplay/index.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Simple Multiply</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-<div class="wrapper">
-    <div class="score-card">
-        <h3>Q.1 What is the <span class="num1">5</span>*<span class="num2">3</span></h3>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="wrapper">
+      <div class="score-card">
+        <h3>
+          Q.1 What is the <span class="num1">5</span>*<span class="num2"
+            >3</span
+          >
+        </h3>
         <p>Your score is <span class="score">0</span></p>
 
-        <input type="number" placeholder="Enter your answer">
+        <input type="number" placeholder="Enter your answer" value="" />
         <button>Submit</button>
+      </div>
     </div>
-</div>
-
-
-
 
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
